# Another-World-Bytecode-Interpreter

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  README.newraw  bank.cpp  bank.h  endian.h  engine.cpp  engine.h  file.cpp  file.h  intern.h  logic.cpp  logic.h  main.cpp  mixer.cpp  mixer.h  parts.cpp  parts.h  resource.cpp  resource.h  sdlstub.cpp  serializer.cpp  serializer.h  sfxplayer.cpp  sfxplayer.h  staticres.cpp  sys.h  sysImplementation.cpp  systemstub.h  util.cpp  util.h  video.cpp  video.h  vm.cpp  vm.h
raw/: raw.vcxproj  raw.vcxproj.filters
src/: bank.h  engine.cpp  engine.h  file.cpp  file.h  intern.h  main.cpp  parts.cpp  resource.cpp  resource.h  serializer.h  sfxplayer.cpp  sfxplayer.h  sys.h  sysImplementation.cpp  video.cpp  video.h  vm.cpp  vm.h
visual_studio/: raw.vcxproj  raw.vcxproj.filters
vs2010/: raw.sln
xcode/raw/raw.xcodeproj/: project.pbxproj
xcode/raw/raw.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
